# OR_ANG

.github/workflows/: github-actions-format-on-push.yml
include/ord/: OpenRoad.hh
src/: CMakeLists.txt  OpenRoad.cc  OpenRoad.i
src/artnetgen/: temp.txt
src/artnetgen/include/artnetgen/: artNetGen.h
src/artnetgen/src/: CMakeLists.txt  MakeArtNetGen.cpp  artNetGen.cpp  artNetGen.i  artNetGen.tcl  distMatching.cpp  distribution.cpp  netlist.cpp  netlist.h  node.cpp  techMapping.cpp  writeSpec.cpp
src/artnetgen/test/intel22/: openroad  run_artnetgen.tcl  run_extract.tcl  run_single.tcl
src/artnetgen/test/intel22/netlist_from_spec_files/: ang_cell_keccak_bbox_14.v  ang_cell_keccak_bbox_18.v  ang_keccak_bbox_14.v  ang_keccak_bbox_18.v  fan_keccak_bbox_14.v  fan_keccak_bbox_18.v  keccak.sdc  keccak.v  keccak_bbox_14.v  keccak_topo_12.sdc  keccak_topo_12.v  keccak_topo_16.sdc  keccak_topo_16.v
src/artnetgen/test/intel22/spec_files_from_def/: ang_cell_keccak_bbox_18.spec  ang_keccak_bbox_14.spec  ang_keccak_bbox_18.spec  fan_cell_keccak_bbox_14.spec  fan_keccak_bbox_14.spec  fan_keccak_bbox_18.spec  keccak_bbox_14.spec  keccak_bbox_18.spec  keccak_topo_16.spec  onlyUseCell.list
src/artnetgen/test/intel22/spec_files_from_def/from_ang/: keccak_bbox_14.spec  keccak_topo_12.spec  keccak_topo_16.spec
src/artnetgen/test/nangate45/: .openroad  MegaBoom.sdc  gcd.sdc  gcd.v  run_artnetgen.tcl  run_extract.tcl  test_circuit.v
src/artnetgen/test/nangate45/spec_files_from_def/: MegaBoom.spec  circaug_0.spec  gcd.spec
src/par/src/: PartitionMgr.cpp  TritonPart.cpp  partitionmgr.tcl
src/par/test/: color_cluster.py  color_netlist.py  gen_graph_invs.tcl  partDef_aes.tcl  partDef_gcd.tcl  partition_aes-tcl-color_1.part  partition_aes-tcl-netlist.part  partition_aes.tcl  partition_gcd-tcl-color.part  partition_gcd-tcl-netlist.part  partition_gcd.tcl  place_info.py  placement_flag.txt
src/rsz/src/: RepairHold.cc
src/utl/include/utl/: Logger.h
